[package]
name = "tls_parser_wasm"
version = "0.1.0"
authors = ["William Lieurance <william.lieurance@namikoda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tls-parser = "0.9.3"
wasm-bindgen = "0.2.68"
nom = "5.1.2"
hex = "0.4.2"
json = "0.12.4"
